--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';	
 
-const title = "Coba Astro Link";
+const title = "Coba Astro Tes";
 const link = "/about";
 const textLink = "Ke halaman About";
 ---
@@ -38,7 +38,7 @@ const textLink = "Ke halaman About";
 				</linearGradient>
 			</defs>
 		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
+		<h1>ECADIN <span class="text-gradient">Jobs</span></h1>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
