--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';	
 
-const title = "Coba Astro Tess";
+const title = "Coba Astro Deploy";
 const link = "/about";
 const textLink = "Ke halaman About";
 ---
