--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,8 +40,8 @@ const textLink = "Ke halaman About";
 		</svg>
 		<h1>ECADIN <span class="text-gradient">Jobs</span></h1>
 		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+			Welcome to the <strong>ECADIN Job Portal</strong>
+Discover opportunities that align your career aspirations with our commitment to sustainability.
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
